<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="category">Category</string>
    <string name="app_name">Idea Bag 2</string>
    <string name="appVersion">IdeaBag 2 v2.7</string>
    <string name="appNumber">2.7</string>
    <string name="title">Title</string>
    <string name="itemId">Item ID</string>
    <string name="difficulty">Difficulty</string>
    <string name="description">Description</string>
    <string name="share">Share Idea</string>
    <string name="bookmark">Bookmark Idea</string>
    <string name="failed_to_download_ideas">Couldn\'t download ideas. Please retry.</string>
    <string name="retry">Retry</string>
    <string name="loadingText">Retrieving Ideas...</string>
    <string name="overviewText">
		This app was developed to provide programmers of all proficiency levels, ideas for pet projects to work on when they are
		looking to increase their proficiency in a particular programming language. Idea Bag is ideal for hands-on learners.
		The ideas featured in this application can be programmed in popular programming languages like C#, Java, Go, Python, Ruby,
		Javascript and PHP for either the Web, MacOS, Windows PC, Android, Windows Phone or iOS. Just fire up your favorite IDE,
		start a new project and begin work on any of the projects featured in this app.
	</string>
    <string name="authorHint">Enter your name</string>
    <string-array name="categories">
        <item>Numbers</item>
        <item>Text</item>
        <item>Networking</item>
        <item>Enterprise Applications</item>
        <item>Threading</item>
        <item>Web</item>
        <item>Files</item>
        <item>Databases</item>
        <item>Graphics and Multimedia</item>
        <item>Games</item>
    </string-array>
    <string name="notes_sample_content">You have no notes for this idea. Tap the button below to add one.</string>
    <string name="edit_text">Edit</string>
    <string name="notesHint">Enter your note..</string>
    <string name="editNote">Edit this note</string>
    <string name="undecidedText">Undecided</string>
    <string name="completedText">Completed</string>
    <string name="in_progressText">In progress</string>
    <string name="markProgressText">What is your status on this idea?</string>
    <string name="note">Note</string>
    <string name="need_help_with_the_solution_to_this_idea">Need help with the solution to this idea?</string>
    <string name="completed">Completed</string>
    <string name="in_progress">In Progress</string>
    <string name="undecided">Undecided</string>
    <string name="alansa_2016">© 2018 Alansa</string>
    <string name="bug_reports">Bug reports</string>
    <string name="overview">Overview</string>
    <string name="idea_bag_icon">Idea Bag icon</string>
    <string name="idea_category">Idea category</string>
    <string name="idea_contents">Idea contents</string>
    <string name="new_ideas_in_this_update">New ideas in this update</string>
    <string name="you_have_no_notes_yet">You have no notes yet.</string>
    <string name="enter_an_indepth_description_of_the_idea">Enter an indepth description of your idea</string>
    <string name="enter_the_idea_s_title">Enter your idea\'s title</string>
    <string name="enter_your_name">Your name</string>
    <string name="submit_idea">Submit idea</string>
    <string name="select_the_idea_s_category">Select your idea\'s category</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notes">Notes</string>
    <string name="bookmark_idea">Bookmark idea</string>
    <string name="share_idea">Share idea</string>
    <string name="ideas_count">Ideas count</string>
    <string name="empty_state_text">You don\'t have any</string>
    <string name="next">Next</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="note_s_content">Note\'s content</string>
    <string name="your_note">Note</string>
    <string name="login">Login</string>
    <string name="register">Sign up</string>
    <string name="logout">Log out</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="edit">Edit</string>
    <string name="enter_your_note_s_title">Enter your note\'s title</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="detail">Detail</string>
    <string name="no_bookmarks_to_show">No bookmarks to show</string>
    <string name="ideas_that_you_bookmark_will_show_up_here">Ideas that you bookmark will show up here</string>
    <string name="no_notes_to_show">No notes to show</string>
    <string name="any_note_you_create_for_the_ideas_provided_will_show_up_here">Any note you create for the ideas provided will show up here</string>
    <string name="dismiss">Dismiss</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_comment">Delete comment</string>
    <string name="delete_comment_confirm_message">Are you sure you want to delete this comment?</string>
    <string name="required">One or more required fields are empty</string>
    <string name="view_comments">View comments</string>
</resources>