<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        cardview:cardBackgroundColor="@color/accent"
        cardview:cardCornerRadius="2dp"
        cardview:cardElevation="2dp"
        cardview:cardUseCompatPadding="true"
        cardview:contentPadding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/notesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/notesContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notesTitle"
                android:layout_marginTop="4dip"
                android:autoLink="web"
                android:linksClickable="true"
                android:maxLines="3"
                android:text="@string/notes_sample_content"
                android:textColor="@color/secondaryTextLight"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/noteEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/edit_text"
                android:textColor="@color/secondaryText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/viewNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignTop="@+id/deleteNote"
                android:layout_marginRight="36dp"
                android:layout_toLeftOf="@id/noteEdit"
                android:text="@string/view"
                android:textColor="@color/secondaryText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/deleteNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="36dp"
                android:layout_toLeftOf="@id/viewNote"
                android:text="@string/delete"
                android:textColor="@color/secondaryText"
                android:textSize="16sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>